syntax = "proto3";

package test;

service TestService {
    rpc TestMethod (TestRequest) returns (TestResponse);
}

message TestRequest {
    string message = 1;
}

message TestResponse {
    string result = 1;
}